patch: fix column client application
