# src/shared/infra/typeorm/entities/ClientApplication.ts
@@ -6,8 +6,6 @@ import {
   UpdateDateColumn,
 } from 'typeorm';
 
-import { Exclude } from 'class-transformer';
-
 @Entity('clients_application')
 class ClientApplication {
   @PrimaryGeneratedColumn('increment')
@@ -18,10 +16,6 @@ class ClientApplication {
 
   @Column()
   email: string;
-
-  @Column()
-  @Exclude()
-  password: string;
 
   @Column()
   avatar?: string;
